--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -46,19 +46,20 @@ body {
     font-size: 20px;
     color: inherit;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 #page-header a:hover {
     color: orange;
-    transition: 0.5s;
 }
 
 /* MAIN NAVIGATION */
 
 #main-navigation {
-    width: 50%;
+    width: 48%;
     display: inline-block;
     text-align: right;
+    margin-right: 5px;
 }
 
 #main-navigation ul {
@@ -86,6 +87,7 @@ body {
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 3px;
+    transition: 0.3s ease all;
 }
 
 #js {
@@ -94,7 +96,6 @@ body {
 
 #main-navigation ul a:hover {
     background: #444;
-    transition: 0.3s ease all;
 }
 
 /* FOOTER */
@@ -144,11 +145,11 @@ footer ul li {
     color: inherit;
     text-decoration: none;
     font-weight: bold;
+    transition: 0.5s;
 }
 
 .credit:hover {
     color: orange;
-    transition: 0.5s;
 }
 
 #base-covering {
@@ -191,8 +192,9 @@ main {
     color: inherit;
     text-decoration: none;
     padding: 8px 13px;
-    border-radius: 3px;
+    border-radius: 5px;
     border: none;
+    transition: 0.3s ease all;
 }
 
 .dropdown-content {
@@ -223,12 +225,6 @@ main {
 
 .dropdown:hover .dropbtn {
     background: #444;
-    transition: 0.3s ease all;
-}
-
-.dropdown:hover .drop-arrow {
-    transform: rotate(90deg);
-    transition: 0.5s;
 }
 
 /* MOBILE RESPONSIVENESS */
@@ -239,6 +235,7 @@ main {
         display: block;
         text-align: center;
         margin-bottom: 20px;
+        margin: auto;
     }
     #main-navigation {
         width: 100%;
